test/compile_fail/retired_op_fails.zig
const shift = @import("shift");

comptime {
    _ = shift.Op;
}
